@@ -17,60 +17,89 @@
 
 package org.apache.solr.handler.admin.api;
 
-import static org.apache.solr.client.solrj.SolrRequest.METHOD.POST;
-import static org.apache.solr.handler.ClusterAPI.wrapParams;
+import static org.apache.solr.client.solrj.impl.BinaryResponseParser.BINARY_CONTENT_TYPE_V2;
 import static org.apache.solr.security.PermissionNameProvider.Name.CORE_EDIT_PERM;
 
-import java.util.HashMap;
-import java.util.Locale;
-import java.util.Map;
-import org.apache.solr.api.Command;
-import org.apache.solr.api.EndPoint;
-import org.apache.solr.api.PayloadObj;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.parameters.RequestBody;
+import javax.inject.Inject;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import org.apache.solr.client.api.model.SolrJerseyResponse;
 import org.apache.solr.common.annotation.JsonProperty;
-import org.apache.solr.common.params.CoreAdminParams;
-import org.apache.solr.common.util.ReflectMapWriter;
+import org.apache.solr.core.CoreContainer;
+import org.apache.solr.core.CoreDescriptor;
 import org.apache.solr.handler.admin.CoreAdminHandler;
+import org.apache.solr.jersey.JacksonReflectMapWriter;
+import org.apache.solr.jersey.PermissionName;
+import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.response.SolrQueryResponse;
+import org.apache.solr.util.TestInjection;
 
 /**
- * V2 API for renaming an existing Solr core.
+ * V2 API for unloading an existing Solr core.
  *
- * <p>The new API (POST /v2/cores/coreName {'unload': {...}}) is equivalent to the v1
- * /admin/cores?action=unload command.
+ * <p>The new API (POST /v2/cores/coreName/unload is equivalent to the v1 /admin/cores?action=unload
+ * command.
  */
-@EndPoint(
-    path = {"/cores/{core}"},
-    method = POST,
-    permission = CORE_EDIT_PERM)
-public class UnloadCoreAPI {
-  private static final String V2_UNLOAD_CORE_CMD = "unload";
+@Path("/cores/{coreName}/unload")
+public class UnloadCoreAPI extends CoreAdminAPIBase {
 
-  private final CoreAdminHandler coreHandler;
-
-  public UnloadCoreAPI(CoreAdminHandler coreHandler) {
-    this.coreHandler = coreHandler;
+  @Inject
+  public UnloadCoreAPI(
+      CoreContainer coreContainer,
+      CoreAdminHandler.CoreAdminAsyncTracker coreAdminAsyncTracker,
+      SolrQueryRequest solrQueryRequest,
+      SolrQueryResponse solrQueryResponse) {
+    super(coreContainer, coreAdminAsyncTracker, solrQueryRequest, solrQueryResponse);
   }
 
-  @Command(name = V2_UNLOAD_CORE_CMD)
-  public void unloadCore(PayloadObj<UnloadCorePayload> obj) throws Exception {
-    final UnloadCorePayload v2Body = obj.get();
-    final Map<String, Object> v1Params = v2Body.toMap(new HashMap<>());
-    v1Params.put(
-        CoreAdminParams.ACTION,
-        CoreAdminParams.CoreAdminAction.UNLOAD.name().toLowerCase(Locale.ROOT));
-    v1Params.put(
-        CoreAdminParams.CORE, obj.getRequest().getPathTemplateValues().get(CoreAdminParams.CORE));
-
-    coreHandler.handleRequestBody(wrapParams(obj.getRequest(), v1Params), obj.getResponse());
+  @POST
+  @Produces({"application/json", "application/xml", BINARY_CONTENT_TYPE_V2})
+  @PermissionName(CORE_EDIT_PERM)
+  public SolrJerseyResponse unloadCore(
+      @PathParam("coreName") String coreName,
+      @Schema(description = "The POJO for representing additional Unload core params") @RequestBody
+          UnloadCoreRequestBody unloadCoreRequestBody)
+      throws Exception {
+    ensureRequiredParameterProvided("coreName", coreName);
+    SolrJerseyResponse solrJerseyResponse = instantiateJerseyResponse(SolrJerseyResponse.class);
+    return handlePotentiallyAsynchronousTask(
+        solrJerseyResponse,
+        coreName,
+        unloadCoreRequestBody.async,
+        "unload",
+        () -> {
+          CoreDescriptor cdescr = coreContainer.getCoreDescriptor(coreName);
+          coreContainer.unload(
+              coreName,
+              unloadCoreRequestBody.deleteIndex,
+              unloadCoreRequestBody.deleteDataDir,
+              unloadCoreRequestBody.deleteInstanceDir);
+          assert TestInjection.injectNonExistentCoreExceptionAfterUnload(coreName);
+          return solrJerseyResponse;
+        });
   }
 
-  public static class UnloadCorePayload implements ReflectMapWriter {
-    @JsonProperty public Boolean deleteIndex;
+  public static class UnloadCoreRequestBody implements JacksonReflectMapWriter {
+    @Schema(description = "If true, will remove the index when unloading the core.")
+    @JsonProperty(defaultValue = "false")
+    public boolean deleteIndex;
 
-    @JsonProperty public Boolean deleteDataDir;
+    @Schema(description = "If true, removes the data directory and all sub-directories.")
+    @JsonProperty(defaultValue = "false")
+    public boolean deleteDataDir;
 
-    @JsonProperty public Boolean deleteInstanceDir;
+    @Schema(
+        description =
+            "If true, removes everything related to the core, including the index directory, configuration files and other related files.")
+    @JsonProperty(defaultValue = "false")
+    public boolean deleteInstanceDir;
 
-    @JsonProperty public String async;
+    @Schema(description = "Request ID to track this action which will be processed asynchronously.")
+    @JsonProperty
+    public String async;
   }
 }
